--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "godotTools.editorPath.godot4": "/home/reid/godot-projects/Godot_v4.3-beta3_linux.x86_64"
+  "godotTools.editorPath.godot4": "c:\\Users\\Reid\\GODOT\\Godot_v4.3-beta2_win64.exe\\Godot_v4.3-beta2_win64.exe"
 }
